# workbook-parser

./: readme.md  requirements.txt  setup.cfg
src/workbook_parser/: WorkbookParser.py  __init__.py
