[metadata]
name = workbook-parser
author = Dorian Mayers
author-email = dorianjmayers@gmail.com
summary = A parser for finding data in Excel workbooks

[options]
packages = find:
python_requires = >=3.7
install_requires =
    openpyxl
    pandas
    numpy
    ipykernel
    black


[options.packages.find]
where = src
exclude =
    tests*
    testing*
    build*
    dist*